--- a/app/views/dashboards/root.html.erb
+++ b/app/views/dashboards/root.html.erb
@@ -13,7 +13,7 @@
                     <div class="card text-center bg-info">
                         <div class="body">
                             <div class="p-15 text-light">
-                                <h3>19</h3>
+                                <h3><%= @count_cases %></h3>
                                 <span>Total Cases IN Egypt</span>
                             </div>
                         </div>
@@ -23,7 +23,7 @@
                     <div class="card text-center bg-secondary">
                         <div class="body">
                             <div class="p-15 text-light">
-                                <h3>15</h3>
+                                <h3><%= @count_govermorates %></h3>
                                 <span>Egypt Governorates</span>
                             </div>
                         </div>
@@ -33,7 +33,7 @@
                     <div class="card text-center bg-warning">
                         <div class="body">
                             <div class="p-15 text-light">
-                                <h3>125</h3>
+                                <h3><%= @count_diseases %></h3>
                                 <span>Total Diseases IN Egypt</span>
                             </div>
                         </div>
@@ -43,7 +43,7 @@
                     <div class="card text-center bg-dark">
                         <div class="body">
                             <div class="p-15 text-light">
-                                <h3>318</h3>
+                                <h3><%= @coun_cities %></h3>
                                 <span>Egypt Cities</span>
                             </div>
                         </div>
@@ -52,7 +52,7 @@
             </div>
 
         <div class="row clearfix">
-            <div class="col-lg-8 col-md-12">
+            <div class="col-lg-7 col-md-12">
                 <div class="card">
                     <div class="header">
                         <h2>Most 5 Spread Cities For Diseases</h2>
@@ -62,45 +62,65 @@
                             <table class="table table-hover m-b-0">
                                 <thead>
                                     <tr>
-                                        <th>ID</th>
                                         <th>City Name</th>
                                         <th>Disease Name</th>
                                         <th>Cases</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                            <h6 class="m-b-0">City ID</h6>
-                                        </td>
-                                        <td>
-                                            <h6 class="margin-0">City Name</h6>
-                                            <span>In "Governorate Name"</span>
-                                        </td>
-                                        <td>
-                                            <h6 class="m-b-0">Disease Name</h6>
-                                            <span class="text-muted">Contagious?</span>
-                                        </td>
-                                        <td class="text-right">
-                                            <div class="text-muted">Cases Count</div>
-                                        </td>
-                                    </tr>
+                                    <% @most_5_spread_cities_for_diseases.map do |row| %>
+                                        <tr>
+                                            <td>
+                                                <h6 class="margin-0"><%= row.city_name %></h6>
+                                                <span>In <%= row.governorate_name %></span>
+                                            </td>
+                                            <td>
+                                                <h6 class="m-b-0"><%= row.disease_name %></h6>
+                                                <% if row.contagious = true %>
+                                                    <span class="text-muted"> 
+                                                        Is Contagious
+                                                    </span>
+                                                <% else %>
+                                                    <span class="text-muted"> 
+                                                        Not Contagious 
+                                                    </span>
+                                                <% end %>
+                                            </td>
+                                            <td class="text-right">
+                                                <h6 class="m-b-0"><%= row.count_diseases %></h6>
+                                                
+                                            </td>
+                                        </tr>
+                                    <% end %>
                                 </tbody>
                             </table>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="card">
-                    <div class="body">
-                    <div class="list-group list-widget">
-                        <a href="app-inbox.html" class="list-group-item">
-                            <span class="badge badge-success">654</span>
-                            <i class="fa fa-envelope text-muted"></i>
-                            Inbox
-                        </a>
+            <div class="col-lg-5 col-md-6">
+                 <div class="card">
+                    <div class="header">
+                        <h2>Most 8 Diseases Spread In Egypt</h2>
                     </div>
+                    <div class="body">
+                        <ul class=" list-unstyled basic-list">
+                            <% @most_8_diseases.map do |row| %>
+                                <li>
+                                    <i class="fa fa-ticket m-r-5"></i> 
+                                    <%= row.name %>
+                                    <% if row.dcount <= 500 %> 
+                                        <span class="badge badge-warning"> 
+                                            <%= row.dcount %>
+                                        </span>
+                                    <% else %>
+                                        <span class="badge badge-danger"> 
+                                            <%= row.dcount %>
+                                        </span>
+                                    <% end %>
+                                </li>
+                            <% end %>
+                        </ul>
                     </div>
                 </div>
             </div>  
@@ -110,31 +130,25 @@
             <div class="col-xl-4 col-lg-12 col-md-12">
                 <div class="card">
                     <div class="header">
-                        <h2>Marketing Campaign <small>This Month </small></h2>                            
+                        <h2>Most Cities Have Patients</h2>                            
                     </div>
                     <div class="body">
                         <div class="table-responsive">
                             <table class="table table-hover m-b-0">
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                            <i class="fa fa-facebook fa-2x"></i>
-                                        </td>
-                                        <td>
-                                            <h6 class="margin-0">Facebook Ads</h6>
-                                            <span>1.2k Likes, 418 Shares</span>
-                                        </td>
-                                        <td>
-                                            <h6 class="m-b-0">$ 402</h6>
-                                            <span class="text-muted">Spent</span>
-                                        </td>
-                                        <td class="text-right">
-                                            <div class="text-success">
-                                                23 <i class="fa fa-long-arrow-up"></i>
-                                            </div>
-                                            <div class="text-muted">up</div>
-                                        </td>
-                                    </tr>
+                                    <% @most_cities_have_patients.map do |row| %>
+                                        <tr>
+                                            <td>
+                                                <h6 class="m-b-0"><%= row.count_patients %></h6>
+                                            </td>
+                                            <td>
+                                                <h6 class="margin-0"><%= row.name_cities %></h6>
+                                            </td>
+                                            <td>
+                                                <h6 class="margin-0"><%= row.name_governorate %></h6>
+                                            </td> 
+                                        </tr>
+                                    <% end %>
                                 </tbody>
                             </table>
                         </div>
