--- a/app/views/dashboards/root.html.erb
+++ b/app/views/dashboards/root.html.erb
@@ -184,27 +184,31 @@
             <div class="col-lg-8 col-md-7">
                 <div class="card">
                     <div class="header">
-                        <h2>Employee Performance</h2>
+                        <h2>most disease spread in hospital</h2>
                     </div>
                     <div class="body">
                         <div class="table-responsive">
                             <table class="table table-hover m-b-0">
                                 <thead class="thead-dark">
                                     <tr>
-                                    <th>Avatar</th>
-                                    <th>Name</th>
-                                    <th>Designation</th>
-                                    <th>Performance</th>
+                                    <th>Hospital Name</th>
+                                    <th>Disease Name</th>
+                                    <th>Sevrity</th>
                                     <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td><img src="/images/governorate.png" class="rounded-circle width35" alt=""></td>
-                                        <td>Marshall Nichols</td>
-                                        <td><span>UI UX Designer</span></td>
-                                        <td><span class="badge badge-success">Good</span></td>
-                                    </tr>
+                                    <% @most_disease_spread_in_hospital.map do |row| %>
+                                        <tr>
+                                            <td><%= row.hospital_name %></td>
+                                            <td><span><%= row.disease_name %></span></td>
+                                            <% if row.ct_cases <= 16 %>
+                                                <td><span class="badge badge-success">Good</span></td>
+                                            <% else %>
+                                                <td><span class="badge badge-danger">Bad</span></td>
+                                            <% end %>
+                                        </tr>
+                                    <% end %>
                                 </tbody>
                             </table>
                         </div>
@@ -214,16 +218,16 @@
             <div class="col-lg-4 col-md-12">
                     <div class="card top_counter">
                         <div class="body">
-                            <div class="icon"><i class="fa fa-user"></i> </div>
+                            <div class="icon"><i class="fa fa-users"></i> </div>
                             <div class="content">
-                                <div class="text">New Employee</div>
-                                <h5 class="number">22</h5>
+                                <div class="text">Male Patients</div>
+                                <h5 class="number"><%= @male_patients.count %></h5>
                             </div>
                             <hr>
                             <div class="icon"><i class="fa fa-users"></i> </div>
                             <div class="content">
-                                <div class="text">Total Employee</div>
-                                <h5 class="number">425</h5>
+                                <div class="text">Female Patients</div>
+                                <h5 class="number"><%= @female_patients.count %></h5>
                             </div>
                         </div>
                     </div>
@@ -231,14 +235,20 @@
                         <div class="body">
                             <div class="icon"><i class="fa fa-university"></i> </div>
                             <div class="content">
-                                <div class="text">Total Salary</div>
-                                <h5 class="number">$2.8M</h5>
+                                <div class="text">Hospitals</div>
+                                <h5 class="number"><%= @count_hospitals %></h5>
                             </div>
                             <hr>
                             <div class="icon"><i class="fa fa-university"></i> </div>
                             <div class="content">
-                                <div class="text">Avg. Salary</div>
-                                <h5 class="number">$1,250</h5>
+                                <div class="text">Private Hospitals</div>
+                                <h5 class="number"><%= @private_hospitals.count %></h5>
+                            </div>
+                            <hr>
+                            <div class="icon"><i class="fa fa-university"></i> </div>
+                            <div class="content">
+                                <div class="text">Private Hospitals</div>
+                                <h5 class="number"><%= @private_hospitals.count %></h5>
                             </div>
                         </div>
                     </div>
